objects/Order_Template__c.object
<CustomObject>
    <description>Object to store frequently used order data</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Templates</relationshipLabel>
        <relationshipName>Order_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inverter_Manufacturer__c</fullName>
        <label>Inverter Manufacturer</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module Configuration</label>
        <referenceTo>Module_Configuration__c</referenceTo>
        <relationshipLabel>Order Templates</relationshipLabel>
        <relationshipName>Order_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module_Quantity__c</fullName>
        <label>Module Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monitoring_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monitoring Opt-Out?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Systems__c</fullName>
        <label>Number of Systems</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Racking_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Racking Opt-Out?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Racking_Type__c</fullName>
        <label>Racking Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Module_Configuration__c</columns>
        <columns>Module_Quantity__c</columns>
        <columns>Inverter_Manufacturer__c</columns>
        <columns>Racking_Type__c</columns>
        <columns>Racking_Opt_Out__c</columns>
        <columns>Monitoring_Opt_Out__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Order Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>